--- a/assignments/assignment_1/assignment.ipynb
+++ b/assignments/assignment_1/assignment.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "'2.11.0'"
       ]
      },
      "execution_count": null,
@@ -17,15 +17,10 @@
     }
    ],
    "source": [
-    "1+1"
+    "import tensorflow\n",
+    "\n",
+    "tensorflow.__version__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
